<resources>
    <string name="app_name">MovieNight</string>

    //tabs titles
    <string name="movies_tab_title">Movies</string>
    <string name="tv_series_tab_title">TV Series</string>
    <string name="retrofit_service_base_url">https://www.omdbapi.com/</string>

    // app strings
    <string name="shows_presentation_title">It\'s quiet here..</string>
    <string name="shows_presentation_subtitle">Hit the search icon at the top and search for a %1$s :)</string>
    <string name="empty_results_view_title">Your research has not produced any result.</string>
    <string name="empty_results_view_subtitle">Hit the search icon at the top and perform a new search! :)</string>
    <string name="empty_watchlist_view_subtitle">Your Watchlist is empty!</string>
    <string name="show_title_placeholder">Title</string>
    <string name="query_hint_movies">Search a movie..</string>
    <string name="query_hint_tv_series">Search a TV Series..</string>
    <string name="rating_title">Rating:</string>
    <string name="watchlist_add">Add to Watchlist</string>
    <string name="show_plot_text">Plot: %1$s</string>
    <string name="show_release_year_text">Released: %1$s</string>
    <string name="show_genre_text">Genre: %1$s</string>
    <string name="show_director_text">Director: %1$s</string>
    <string name="show_actors_text">Main actors: %1$s</string>
    <string name="toolbar_watchlist_title">Your Watchlist</string>
    <string name="content_description">Image</string>

    // toolbar
    <string name="toolbar_menu_search_title">Search</string>

    // snackbar strings
    <string name="show_stored_success_message">The show has been stored in your watchlist!</string>
    <string name="show_details_not_found_message">We could not fetch details about this show!</string>
</resources>