<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/shows_presentation_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_20_dp"
        android:layout_marginTop="@dimen/margin_30_dp"
        android:layout_marginEnd="@dimen/margin_20_dp"
        app:layout_constraintBottom_toTopOf="@+id/shows_presentation_image_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/people_watching_movie"
        android:contentDescription="@string/content_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shows_presentation_image_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/shows_presentation_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20_dp"
        android:layout_marginTop="@dimen/margin_30_dp"
        android:layout_marginEnd="@dimen/margin_20_dp"
        android:fontFamily="@font/avenir_bold"
        android:gravity="center"
        android:text="@string/shows_presentation_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shows_presentation_image_guideline" />

    <TextView
        android:id="@+id/shows_presentation_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20_dp"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:layout_marginEnd="@dimen/margin_20_dp"
        android:fontFamily="@font/avenir_bold"
        android:gravity="center"
        android:text="@string/shows_presentation_subtitle"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shows_presentation_title" />
</androidx.constraintlayout.widget.ConstraintLayout>