<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/show_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_20_dp"
        android:layout_marginTop="@dimen/margin_30_dp"
        android:layout_marginEnd="@dimen/margin_20_dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/show_cover_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/content_description" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/show_cover_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_40_dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_cover">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/show_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20_dp"
                android:layout_marginEnd="@dimen/margin_20_dp"
                android:fontFamily="@font/avenir_bold"
                android:gravity="center"
                android:text="@string/show_title_placeholder"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/detail_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:layout_marginEnd="@dimen/margin_20_dp"
                app:cardCornerRadius="@dimen/cardview_radius"
                app:cardBackgroundColor="@color/colorLightPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/show_plot"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:layout_marginTop="@dimen/margin_20_dp"
                        android:layout_marginEnd="@dimen/margin_30_dp"
                        android:ems="10"
                        android:fontFamily="@font/avenir_bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/show_release_year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:layout_marginTop="@dimen/margin_20_dp"
                        android:layout_marginEnd="@dimen/margin_30_dp"
                        android:text="@string/show_release_year_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/show_plot" />

                    <TextView
                        android:id="@+id/show_genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:layout_marginTop="@dimen/margin_15_dp"
                        android:layout_marginEnd="@dimen/margin_30_dp"
                        android:text="@string/show_genre_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/show_release_year" />

                    <TextView
                        android:id="@+id/show_director"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:layout_marginTop="@dimen/margin_15_dp"
                        android:layout_marginEnd="@dimen/margin_30_dp"
                        android:text="@string/show_director_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/show_genre" />

                    <TextView
                        android:id="@+id/show_actors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30_dp"
                        android:layout_marginTop="@dimen/margin_15_dp"
                        android:layout_marginEnd="@dimen/margin_30_dp"
                        android:layout_marginBottom="@dimen/margin_20_dp"
                        android:text="@string/show_actors_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/show_director"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:layout_marginEnd="@dimen/margin_20_dp"
                android:numStars="10"
                android:progressTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/detail_cardview" />

            <ImageView
                android:id="@+id/watchlist_icon"
                android:layout_width="@dimen/watchlist_icon_dim"
                android:layout_height="@dimen/watchlist_icon_dim"
                android:layout_marginTop="@dimen/margin_30_dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar"
                app:srcCompat="@drawable/watchlist_icon"
                android:contentDescription="@string/content_description" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:fontFamily="@font/avenir_bold"
                android:text="@string/rating_title"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_cardview" />

            <TextView
                android:id="@+id/add_to_watchlist_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20_dp"
                android:layout_marginTop="@dimen/margin_10_dp"
                android:layout_marginEnd="@dimen/margin_20_dp"
                android:layout_marginBottom="@dimen/margin_30_dp"
                android:fontFamily="@font/avenir_bold"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/watchlist_add"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/watchlist_icon"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
